[gd_scene load_steps=5 format=2]

[ext_resource path="res://Sprites/9patch_panel.png" type="Texture" id=1]
[ext_resource path="res://Sprites/piece.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Theme_Panel_Lvl.tres" type="Theme" id=3]
[ext_resource path="res://Scripts/panel_levelup.gd" type="Script" id=4]

[node name="NinePatchRect" type="NinePatchRect"]
modulate = Color( 0.733333, 0.733333, 0.733333, 1 )
margin_right = 188.0
margin_bottom = 47.0
rect_min_size = Vector2( 240, 47 )
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
theme = ExtResource( 3 )
texture = ExtResource( 1 )
region_rect = Rect2( 0, 0, 48, 48 )
patch_margin_left = 8
patch_margin_top = 8
patch_margin_right = 9
patch_margin_bottom = 8
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_constants/margin_right = 5
custom_constants/margin_top = 8
custom_constants/margin_left = 27
custom_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 27.0
margin_top = 8.0
margin_right = 235.0
margin_bottom = 42.0
custom_constants/separation = 15

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer" groups=["lvlup_sprite"]]
margin_top = 9.0
margin_right = 16.0
margin_bottom = 25.0
size_flags_vertical = 4
texture = ExtResource( 2 )
stretch_mode = 6

[node name="Label" type="RichTextLabel" parent="MarginContainer/HBoxContainer" groups=["lvlup_text"]]
margin_left = 30.0
margin_top = 2.0
margin_right = 180.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 30 )
mouse_filter = 2
size_flags_vertical = 4
meta_underlined = false
fit_content_height = true
scroll_active = false

[connection signal="gui_input" from="." to="." method="_on_NinePatchRect_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_NinePatchRect_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_NinePatchRect_mouse_exited"]
